
2000-04-21  Ales Hvezda  <ahvezda@geda.seul.org>

	* */*: Removed all traces of the physical attribute.  This attribute
	  is now called footprint

2000-04-20  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/gnetlist.scm: Added useful scheme functions by Andrew 
          Bardsley

2000-04-15  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/g_netlist.c: Added g_get_pin_attribute which given a uref,
	  a pin number, and a wanted attribute returns the value.

	* src/create_proto: Updated prototype.h creation script to use gtk/glib
	  paths from my machine (installed in /usr/local ...)

	* src/g_register.c: Added entry for g_get_pin_attribute

2000-02-19  Ales Hvezda  <ahvezda@geda.seul.org>

	* README/INSTALL: Updated files to reflect next release
   
	* src/*.c: Fixed all warnings (using -Wall -Werror)

	* tests/*.verilog *.vhdl: Updated stored output to be current
	  (so that the tests pass)

	* src/gnetlist.c: Minor type change (so that it work on PPC)
          Thanks to njh for pointing this out.

2000-02-07  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/gnet-spice.scm: Updated file with Bas' patch to allow the
	  use of the uref=include... mechanism, see for more info: 
	  http://www.geda.seul.org/mailinglist/geda-dev25/msg00113.html

2000-02-04  Stefan Petersen  <spe@geda.seul.org>

	* scheme/gnet-PCBboard.scm: Fixed (hopefully) guile version 
	  incompatibilities in module popen (didn't exist before 1.3.2)
	
2000-01-25  Matt Ettus   <matt@ettus.com>

	* scheme/gnet-PCBboard.scm:  Added JM's code

	* autoconf and automake stuff updated for the above.

	* src/gschem2pcb:  Added.  This will hopefully be integrated
	  directly, soon.

	* README.pcb:  Info on usage for above

2000-01-24  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/g_netlist.c: Fixed g_get_packages to properly return ALL packages
	  of ALL loaded schematics (basically switch to an previous attempt, 
	  and folding in any improvements the new version had)

1999-10-19  Matt Ettus   <matt@ettus.com>
